--- a/fuse/src/index.html
+++ b/fuse/src/index.html
@@ -77,6 +77,7 @@
         <!-- angular templates will be automatically converted in js and inserted here -->
         <!-- endinject -->
         <!-- endbuild -->
+        <script link="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.min.js"></script>
 
     </body>
 </html>
